feat: 派手な演出（ホワイトアウト、スクリーンシェイク、安定したテキストデコーディング）を追加

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@400;700&family=Yuji+Syuku&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@400;700&family=Yuji+Syuku&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <!-- html2canvas for image generation -->
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
+
 <body>
+    <div id="whiteoutOverlay" class="whiteout-overlay"></div>
     <div class="container">
         <header>
             <h1>ワンクリック<br><span class="glitch" data-text="黒歴史">黒歴史</span>ポエム生成機</h1>
@@ -31,7 +35,7 @@
                         <p id="poemText"></p>
                     </div>
                 </div>
-                
+
                 <div class="action-buttons">
                     <button id="retryBtn" class="secondary-btn">再詠唱</button>
                     <button id="downloadBtn" class="secondary-btn">写しをとる (保存)</button>
@@ -46,4 +50,5 @@
     <script src="src/data.js"></script>
     <script src="src/script.js"></script>
 </body>
+
 </html>
