feat: 魔法陣ランダム生成機能の追加と演出のブラッシュアップ

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <body>
     <div id="whiteoutOverlay" class="whiteout-overlay"></div>
+    <div id="magicCircleContainer" class="magic-circle-container">
+        <canvas id="magicCircleCanvas"></canvas>
+    </div>
     <div class="container">
         <header>
             <h1>ワンクリック<br><span class="glitch" data-text="黒歴史">黒歴史</span>ポエム生成機</h1>
@@ -47,6 +50,7 @@
             <p>© 2026 Dark History Generator / Powered by Gemini 3.0 (Concept)</p>
         </footer>
     </div>
+    <script src="src/magicCircle.js"></script>
     <script src="src/data.js"></script>
     <script src="src/script.js"></script>
 </body>
